metadata/force-app/main/default/objects/CustomName_HZsVl__c/CustomName_HZsVl__c.object-meta.xml
<CustomObject>
    <description>Description_aIQxD</description>
    <label>CustomLabel_dLvMu</label>
    <nameField>
        <label>CustomLabel_dLvMu</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_dLvMus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>