metadata/force-app/main/default/objects/CustomName_HZsVl__c/fields/CustomField_SleMy__c.field-meta.xml
<CustomField>
    <fullName>CustomField_SleMy__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldklFyz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>